--- a/charts/home-assistant/0.0.1/values.yaml
+++ b/charts/home-assistant/0.0.1/values.yaml
@@ -9,12 +9,21 @@ service:
   type: ClusterIP
   port: 80
 
+nfs:
+  server: 192.168.0.40
+  path: /data
+  storageSize: 10Gi
+
+volumes:
+  - name: nfs-volume
+      persistentVolumeClaim:
+        claimName: nfs-pvc
 ingress:
   enabled: true
   annotations: {}
      kubernetes.io/ingress.class: nginx
   hosts:
-    - host: chart-example.local
+    - host: homeassistant.grubbr.io
       paths:
         - path: /
           pathType: ImplementationSpecific
