--- a/charts/factorio/0.0.1/values.yaml
+++ b/charts/factorio/0.0.1/values.yaml
@@ -16,7 +16,7 @@ service:
       protocol: TCP
 
 ingress:
-  enabled: true
+  enabled: True
   className: "nginx"
   annotations:
      kubernetes.io/ingress.class: nginx
