more issue fixes

--- a/charts/factorio/0.0.1/values.yaml
+++ b/charts/factorio/0.0.1/values.yaml
@@ -21,7 +21,7 @@ ingress:
   annotations:
      kubernetes.io/ingress.class: nginx
   hosts:
-    - host: factorio
+    - host: factorio.grubbr.io
       paths:
         - path: /
           pathType: ImplementationSpecific
