--- a/charts/home-assistant/0.0.1/values.yaml
+++ b/charts/home-assistant/0.0.1/values.yaml
@@ -21,7 +21,7 @@ volumes:
 
 ingress:
   enabled: True
-  annotations: {}
+  annotations:
      kubernetes.io/ingress.class: nginx
   hosts:
     - host: homeassistant.grubbr.io
