--- a/charts/transmission/0.0.1/templates/deployment.yaml
+++ b/charts/transmission/0.0.1/templates/deployment.yaml
@@ -16,10 +16,10 @@ spec:
         - name: {{ .Values.container.name }}
           image: {{ .Values.container.image }}
           ports:
-            - containerPort: {{ .Values.container.ports[0] }}
-            - containerPort: {{ .Values.container.ports[1] }}
+            - containerPort: {{index .Values.container.ports 0 }}
+            - containerPort: {{index .Values.container.ports 1 }}
               protocol: TCP
-            - containerPort: {{ .Values.container.ports[1] }}
+            - containerPort: {{index .Values.container.ports 1 }}
               protocol: UDP
           volumeMounts:
             - mountPath: /config
@@ -27,12 +27,7 @@ spec:
             - mountPath: /downloads
               name: transmission-downloads
           env:
-            - name: TRANSMISSION_HOME
-              value: "/config"
-      volumes:
-        - name: transmission-config
-          persistentVolumeClaim:
-            claimName: {{ .Values.volumes.configPvc }}
-        - name: transmission-downloads
-          persistentVolumeClaim:
-            claimName: {{ .Values.volumes.downloadsPvc }}
+            {{- range $key, $value := .Values.container.env }}
+            - name: {{ $key }}
+              value: {{ $value }}
+            {{- end }}
