--- a/charts/transmission/0.0.1/values.yaml
+++ b/charts/transmission/0.0.1/values.yaml
@@ -7,17 +7,14 @@ deployment:
 
 container:
   name: transmission
-  image: lscr.io/linuxserver/transmission:latest
+  image: lscr.io/linuxserver/transmission
+  tag: latest
   ports: [9091, 51413]
   env:
-    - name: TRANSMISSION_HOME
-      value: "/config"
-    - name: TZ
-      value: "America/Denver"
-    - name: PUID
-      value: "911"
-    - name: PGID
-      value: "911"
+    TRANSMISSION_HOME: /config
+    TZ: America/Denver
+    PUID: 911
+    PGID: 911
 
 service:
   name: transmission-service
@@ -25,14 +22,18 @@ service:
     http:
       port: 443
       targetPort: 9091
+      protocol: TCP
     tcp:
       port: 51413
       targetPort: 51413
+      protocol: TCP
     udp:
       port: 51413
       targetPort: 51413
+      protocol: UDP
 
 ingress:
+  enabled: true
   name: transmission-ingress
   annotations:
     rewriteTarget: /transmission/$2
