--- a/charts/transmission/0.0.1/templates/deployment.yaml
+++ b/charts/transmission/0.0.1/templates/deployment.yaml
@@ -22,12 +22,17 @@ spec:
             - containerPort: {{index .Values.container.ports 1 }}
               protocol: UDP
           volumeMounts:
-            - mountPath: /config
-              name: transmission-config
-            - mountPath: /downloads
-              name: transmission-downloads
+            {{- range $key, $value := .Values.container.volumeMounts }}
+            - name: {{ $.Values.volume.name }}
+              mountPath: {{ $value.mountPath }}
+              subPath: {{ $value.subPath }}
+            {{- end }}
           env:
             {{- range $key, $value := .Values.container.env }}
             - name: {{ $key }}
               value: {{ $value | quote }}
             {{- end }}
+      volumes:
+        - name: {{ .Values.volume.name }}
+          persistentVolumeClaim:
+            claimName: {{ .Values.deployment.name }}-pvc
