--- a/charts/home-assistant/0.0.1/Chart.yaml
+++ b/charts/home-assistant/0.0.1/Chart.yaml
@@ -22,3 +22,4 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
+icon: https://upload.wikimedia.org/wikipedia/en/4/49/Home_Assistant_logo_%282023%29.svg
