--- a/charts/transmission/0.0.1/values.yaml
+++ b/charts/transmission/0.0.1/values.yaml
@@ -28,14 +28,6 @@ service:
       port: 443
       targetPort: 9091
       protocol: TCP
-    tcp:
-      port: 51413
-      targetPort: 51413
-      protocol: TCP
-    udp:
-      port: 51413
-      targetPort: 51413
-      protocol: UDP
 
 volume:
   name: data
@@ -49,6 +41,6 @@ ingress:
     useRegex: "true"
   className: nginx
   host: grubbr.io
-  path: /transmission(/|$)(
+  path: /transmission(/|$)(.*)
   tlsSecret: transmission-tls
 
